--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -64,6 +64,7 @@ th{
   max-width: 718px;
   width: 100%;
   padding: 2.5rem 2.5rem 2.5rem 0;
+  z-index: 3;
 }
 .banner-text{
   max-width: 330px;
@@ -75,6 +76,9 @@ th{
   top: .045em;
   padding-left: .5em;
   font-size: 18px;
+}
+.video-wrapper iframe, .video-wrapper video {
+  display: none;
 }
 .mark {
   background-image: url('../img/rapidfire-mark.png');
@@ -651,6 +655,37 @@ footer li a {
     background-size: auto;
     background-repeat: no-repeat;
     min-height: 434px;
+  }
+  .banner-home {
+    background: none;
+  }
+  .video-wrapper {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    pointer-events: none;
+    overflow: hidden;
+  }
+  .video-overlay {
+    background-color:rgba(0, 44, 88, .65);
+    z-index: 2;
+    width: 100vw;
+    height: 630px;
+    position: absolute;
+    top: 0;
+    left: 0;
+  }
+  .video-wrapper iframe, .video-wrapper video {
+    display: block;
+    z-index:  1;
+    width: 100vw;
+    height: 630px;
+    position: absolute;
+    top: 0;
+    left: 0;
   }
 }
 /* 
