--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -135,12 +135,6 @@ th{
 .container-gallery {
   max-width: 1028px;
 }
-.container-main {
-  max-width: 1200px;
-}
-.container {
-  max-width: 1290px;
-}
 .text-small{
 	font-size:14px;
   letter-spacing: .1pt;
@@ -297,7 +291,6 @@ button.btn-lg{
 .btn-cta{
   border-width: 1px;
   letter-spacing: .4pt;
-  flex: 1 1 0%;
 	@apply font-display font-normal py-4 px-6 bg-blue-500 text-white border-white;
 }
 .btn-cta:hover{
@@ -587,6 +580,14 @@ a.skip-main:focus, a.skip-main:active {
   top: 4px;
   margin-right: .25rem;
 }
+.careers p {
+  padding: 0;
+  margin: 0;
+}
+.careers i.fa-angle-right {
+  margin-left: .35rem;
+  font-size: 18px;
+}
 .card {
 	@apply max-w-sm overflow-hidden mr-auto ml-auto mb-8;
 }
@@ -648,6 +649,12 @@ footer li a {
   font-weight: 400;
   text-decoration: underline;
 }
+.figPeople {
+  max-width: 500px;
+}
+.figPeople img {
+  @apply mb-4;
+}
 /* Timeline specific CSS */ 
 .timeline-title {
   font-family: "Proxima Nova", Helvetica, sans-serif;
@@ -662,18 +669,11 @@ footer li a {
   background-repeat: no-repeat;
   height: 300px;
 }
-.timeline-title {
-  font-family: "Proxima Nova", Helvetica, sans-serif;
-  font-size: 24px;
-  font-weight: 600;
-  letter-spacing: 1.1pt;
-  line-height: 26px;
-}
-.image {
-  background-image: url("https://via.placeholder.com/440x300/ccc/fff.png");
+.image2 {
+  background-image: url("https://via.placeholder.com/484x274/ccc/fff.png");
   background-size: contain;
   background-repeat: no-repeat;
-  height: 300px;
+  height: 274px;
 }
 /*==================================
     TIMELINE
@@ -843,6 +843,9 @@ footer li a {
     text-align: right;
     padding-right: 30px;
   }
+  .timeline-centered > .timeline-item:nth-child(even) .timeline-content img {
+    margin-left: 40px;
+  }
   .timeline-centered > .timeline-item:nth-child(2n) .timeline-content p {
     margin-left: 13%;
   }
@@ -900,6 +903,9 @@ footer li a {
   .md\:border-b-1{
     border-bottom-width: 1px;
   }
+  footer .states li:last-of-type {
+    @apply col-start-2;
+  }
 } 
 @media (min-width:1024px) {
   .card-title {
@@ -914,9 +920,22 @@ footer li a {
   .job-container a:first-of-type {
     margin-right: 50px;
   }
+  #locMap .states li:nth-of-type(2), .states li:nth-of-type(5) {
+    @apply justify-self-center;
+  }
+  locMap .states li:nth-of-type(3), .states li:nth-of-type(6) {
+    @apply justify-self-end;
+  }
+  footer .states li:nth-of-type(2), footer .states li:nth-of-type(4), footer .states li:nth-of-type(5) {
+    @apply justify-self-end;
+  }
+
 }
 /* because tablets */
 @media (min-width:1025px) {
+  .container-main {
+    max-width: 1290px;
+  }
   .show-for-large-flex {
     display: flex;
   }
@@ -992,9 +1011,6 @@ footer li a {
   and (min-device-width: 320px) 
   and (max-device-width: 1366px)
   and (-webkit-min-device-pixel-ratio: 2) {
-    .container-main {
-      max-width: 100vw;
-    }
     .totop {
       bottom: 2%;
       right: 6%;
